--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         </activity>
         <activity android:name=".ui.LibraryListActivity"/>
         <activity android:name=".ui.UpdateLibraryActivity"/>
+        <activity android:name=".ui.BookDetailActivity"/>
+        <activity android:name=".ui.BookSearchActivity"/>
     </application>
 
 </manifest>
