--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".ui.UpdateLibraryActivity"/>
         <activity android:name=".ui.BookDetailActivity"/>
         <activity android:name=".ui.BookSearchActivity"/>
+        <activity android:name=".ui.CheckedOutBooksActivity"/>
     </application>
 
 </manifest>
