--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,13 @@
           xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="29" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="29" />
+
+
 
     <application
             android:allowBackup="true"
@@ -30,6 +37,7 @@
         <activity android:name=".ui.BookSearchActivity"/>
         <activity android:name=".ui.CheckedOutBooksActivity"/>
         <activity android:name=".ui.CreateLibraryActivity" />
+        <activity android:name=".ui.LibraryMapActivity"/>
     </application>
 
 </manifest>
